Update preview figure

--- a/thesis_fig3.ipynb
+++ b/thesis_fig3.ipynb
@@ -150,12 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "db1104c6-8e34-4eaf-94a9-136e678d7768",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(fname='figures/pulse_combined.pdf')"
+    "fig.savefig(fname='figures/pulse_combined.pdf')\n",
+    "fig.savefig(fname='figures/pulse_combined.jpg')"
    ]
   },
   {
