--- a/pulse_designer.ipynb
+++ b/pulse_designer.ipynb
@@ -8,9 +8,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from pulse_designer import *\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib"
+    "from pulse_designer import *"
    ]
   },
   {
